Put the control scrollbar on the correct element

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,7 +1,3 @@
 .buttonRow {
-    overflow-x: auto;
-}
-
-.buttonRowWidthWrapper {
     width: max-content;
 }
