--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,12 +10,17 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
+
+  overflow-x: auto;
+  position: relative;
 }
 
 .title {
   margin: 0;
   /* Optical centering */
   margin-bottom: -4px;
+  position: sticky;
+  left: 0;
 }
 
 .metadata {
